[package]
name = "rsnes-emulator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1

[dependencies]
clap = { version="3.0", features = ["cargo", "derive"] }
winit = "0.26"
cpal = "0.13"
pollster = "0.2"
rsnes = { path = "../rsnes" }
save-state = { path = "../save-state" }

[dependencies.wgpu]
version = "0.12"
default-features = false
features = ["spirv"]

[build-dependencies.shaderc]
version = "0.7"
