[package]
name = "snesulate"
version = "0.1.0"
edition = "2018"
description = "a siple SNES emulator"
keywords = ["emulator", "snes", "famicom"]
categories = ["emulators"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[dependencies]
